--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet"  href="styles\reset.css">
-		<link rel="stylesheet"  href="styles/Layout/navfooter.css">
+        <link rel="stylesheet"  href="styles/css/reset.css">
+		<link rel="stylesheet"  href="styles/css/navfooter.css">
+		<link rel="stylesheet"  href="styles/css/contact.css">
 		<title>Le sourire de l'humanité</title>
 		<!-- libs font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -33,6 +34,7 @@
             </div>
 
         </main>
+            <h1>Contact</h1>
 
 
         <footer>
