finished home page styling Co-authored-by: Ray <nRayen@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet"  href="styles/css/reset.css">
 		<link rel="stylesheet"  href="styles/css/navfooter.css">
 		<link rel="stylesheet"  href="styles/css/contact.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<title>Le sourire de l'humanité</title>
 		<!-- libs font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -18,13 +20,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="#">Qui somme nous ?</a></li>
-                    <li><a href="#">Nos missions</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="nous.html">Qui somme nous ?</a></li>
+                    <li><a href="missions.html">Nos missions</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
-            <a href="#" class="don">Faire un don</a>
+            <a href="don.html" class="don">Faire un don</a>
         </header>
 
         <main>
