--- a/missions.html
+++ b/missions.html
@@ -6,11 +6,10 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="styles/css/reset.css">
 		<link rel="stylesheet"  href="styles/css/navfooter.css">
-		<link rel="stylesheet"  href="styles/css/index.css">
-		<title>Le sourire de l'humanité</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="stylesheet"  href="styles/css/contact.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+		<title>Le sourire de l'humanité</title>
 		<!-- libs font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	</head>
@@ -21,34 +20,25 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="nous.html">Qui somme nous ?</a></li>
-                    <li><a href="missions.html">Nos missions</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="missions.html"class="active">Nos missions</a></li>
+                    <li><a href="contact.html" >Contact</a></li>
                 </ul>
             </nav>
             <a href="don.html" class="don">Faire un don</a>
         </header>
+
         <main>
             <div id="présentation"><img src="images\photo\WhatsApp Image 2023-03-05 à 22.24.45.jpg" alt="image présentation"></div>
             <div class="background">
                 <img src="images\photo\world.png" alt="Image world fond">
             </div>
-            <section class="content">
 
-                <h1>Association humanitaire</h1>
-                <div id="logo2">
-                    <img src="images\Logo\logo découpé.png" alt="logo du site découpé">
-                </div>
-                <div id="slogan">
-                    <p>"Ensemble unissons nous dans<br>l'entraide"</p>
-                </div>
-                <div id="intro">
-                    <p>Cette association a pour but de soutenir de façon durable des projets de développement de vie à des populations en situation de détresse ou de misère dans différents pays du monde en leur apportant une aide d'urgence (éducation, scolaire, accès à l'eau, alimentaire, santé et toute autre aide d'urgence).</p>
-                </div> 
-                
-            </section>
         </main>
+            <h1>Contact</h1>
+
+
         <footer>
             <div class="footercontent">
                 <div id="foot-1">
@@ -71,3 +61,4 @@
         </footer>
     </body>
 </html>
+
