--- a/nous.html
+++ b/nous.html
@@ -6,7 +6,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="styles/css/reset.css">
 		<link rel="stylesheet"  href="styles/css/navfooter.css">
-		<link rel="stylesheet"  href="styles/css/contact.css">
+		<link rel="stylesheet"  href="styles/css/nous.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<title>Le sourire de l'humanité</title>
