finished Qui sommes nous

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
-            <a href="don.html" class="don">Faire un don</a>
+            <a href=" https://paypal.me/lesouriredelhumanite?country.x=FR&locale.x=fr_FR " target="_blank" class="don">Faire un don</a>
         </header>
 
         <main>
