finished Qui sommes nous

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <a href="don.html" class="don">Faire un don</a>
+            <a href="https://paypal.me/lesouriredelhumanite?country.x=FR&locale.x=fr_FR" target="_blank" class="don">Faire un don</a>
         </header>
         <main>
             <div id="présentation"><img src="images\photo\WhatsApp Image 2023-03-05 à 22.24.45.jpg" alt="image présentation"></div>
