--- a/nous.html
+++ b/nous.html
@@ -26,7 +26,7 @@
                     <li><a href="contact.html" >Contact</a></li>
                 </ul>
             </nav>
-            <a href="don.html" class="don">Faire un don</a>
+            <a href="https://paypal.me/lesouriredelhumanite?country.x=FR&locale.x=fr_FR " target="_blank" class="don">Faire un don</a>
         </header>
 
         <main>
@@ -36,9 +36,28 @@
             </div>
 
         </main>
-            <h1>Qui sommes nous ?</h1>
+            <section class="content">
+                <h1>Qui sommes nous ?</h1>
+                <p>
+                    L’Association Le Sourire de l’Humanité a été fondée dans le but d’apporter l’aide, le soutien, le bien-être et le sourire aux personnes démunies et défavorisées du monde.<br>
+                    Notre Association est porteuse de valeurs d’entraides universelles afin de soutenir de façon durable des projets de développement de vie en apportant une aide d’urgence à propos des besoins fondamentaux de la personne, entre autres dans les domaines suivants (liste non exhaustive) :<br>
+                    <br>
+                    - Éducation, formation et administration<br>
+                    - Santé<br>
+                    - Aide alimentaire<br> 
+                    - Matériel scolaire et vestimentaire<br> 
+                    - Gestion et utilisation des ressources et énergies<br> 
+                    - Accès à l’eau potable<br> 
+                    - Aide à la plantation et à la construction de structures tels que des écoles et des lieux de culte.<br>
+                    <br>
+                    Nous apportons également notre soutien aux initiatives artisanales des petites coopératives, des petits agriculteurs et producteurs des pays en voie de développement par la communication en mettant en avant leurs produits et leurs arts.<br> 
+                    <br>
+                    Grâce à vos dons et à votre soutien nous pouvons alléger leurs souffrances, éradiquer la précarité et soulager les populations les plus démunies.<br>
+                    <br>
+                    <strong>Unissons-nous dans l’entraide !!!</strong>
+                </p>
 
-
+            </section>
         <footer>
             <div class="footercontent">
                 <div id="foot-1">
