Finished html for missions page

--- a/missions.html
+++ b/missions.html
@@ -6,7 +6,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="styles/css/reset.css">
 		<link rel="stylesheet"  href="styles/css/navfooter.css">
-		<link rel="stylesheet"  href="styles/css/contact.css">
+		<link rel="stylesheet"  href="styles/css/missions.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<title>Le sourire de l'humanité</title>
@@ -35,8 +35,38 @@
                 <img src="images\photo\world.png" alt="Image world fond">
             </div>
 
+            <section class="content">
+                <h1>Nos missions</h1>
+
+                <article class="card">
+                    <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
+
+                    <div class="card-desc">
+                        <h2 class="card-title">Colis alimentaires pour familles démunies au Maroc</h2>
+                        <p class="desc">...</p>
+                        <p class="mission-status encours">En cours</p>
+                        <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
+
+                    <div class="card-desc">
+                        <h2 class="card-title">Collecte pour une école à Bamako</h2>
+                        <p class="desc">...</p>
+                        <p class="mission-status fini">Terminée</p>
+                        <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
+                    </div>
+                </article>
+
+
+
+
+            </section>
+
+
         </main>
-            <h1>Contact</h1>
 
 
         <footer>
