Finished missions page

--- a/missions.html
+++ b/missions.html
@@ -38,27 +38,40 @@
             <section class="content">
                 <h1>Nos missions</h1>
 
-                <article class="card">
-                    <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
+                <div class="missions-container">
+                    <article class="card">
+                        <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
 
-                    <div class="card-desc">
-                        <h2 class="card-title">Colis alimentaires pour familles démunies au Maroc</h2>
-                        <p class="desc">...</p>
-                        <p class="mission-status encours">En cours</p>
-                        <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
-                    </div>
-                </article>
+                        <div class="card-desc">
+                            <div class="top">
+                                <a href="#"><h2 class="card-title">Colis alimentaires pour familles démunies au Maroc</h2></a>
+                                <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus iusto temporibus a, voluptate deserunt quibusdam, dignissimos eius optio ad quod ratione omnis sapiente molestias quia.</p>
+                            </div>
+                            
+                            <div class="bottom">
+                                <span class="mission-status encours">En cours</span>
+                                <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
+                            </div>
+                        </div>
+                    </article>
 
-                <article class="card">
-                    <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
+                    <article class="card">
+                        <img src="/images/Logo/Le sourire de l'humanité.jpg" alt="image carte">
 
-                    <div class="card-desc">
-                        <h2 class="card-title">Collecte pour une école à Bamako</h2>
-                        <p class="desc">...</p>
-                        <p class="mission-status fini">Terminée</p>
-                        <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
-                    </div>
-                </article>
+                        <div class="card-desc">
+                            <div class="top">
+                                <a href="#"><h2 class="card-title">Collecte pour une école à Bamako</h2></a>
+                                <p class="desc">...</p>
+                            </div>
+
+                            <div class="bottom">
+                                <span class="mission-status fini">Terminée</span>
+                                <a href="#">Voir plus <i class="fa-solid fa-angles-right"></i></a>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+
 
 
 
